语义记忆结构优化，使用公共词嵌入器。增加四种记忆统一基类。文档、向量、图三种存储持久化